--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -646,7 +646,7 @@
       },
       "outputs": [],
       "source": [
-        "customers_df.customer_id.duplicated()"
+        "customers_df.customer_id.duplicated"
       ]
     },
     {
