--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -186,7 +186,7 @@
         }
       ],
       "source": [
-        "customers_df = pd.read_csv('E-Commerce Public Dataset/customers_dataset.csv')\n",
+        "customers_df = pd.read_csv('/E-Commerce Public Dataset/customers_dataset.csv')\n",
         "customers_df.head()"
       ]
     },
@@ -297,7 +297,7 @@
         }
       ],
       "source": [
-        "geo_df = pd.read_csv('E-Commerce Public Dataset/geolocation_dataset.csv')\n",
+        "geo_df = pd.read_csv('/E-Commerce Public Dataset/geolocation_dataset.csv')\n",
         "geo_df.head()"
       ]
     },
@@ -427,7 +427,7 @@
         }
       ],
       "source": [
-        "order_items = pd.read_csv('E-Commerce Public Dataset/order_items_dataset.csv')\n",
+        "order_items = pd.read_csv('/E-Commerce Public Dataset/order_items_dataset.csv')\n",
         "order_items.head()"
       ]
     },
@@ -538,7 +538,7 @@
         }
       ],
       "source": [
-        "order_pay = pd.read_csv('E-Commerce Public Dataset/order_payments_dataset.csv')\n",
+        "order_pay = pd.read_csv('/E-Commerce Public Dataset/order_payments_dataset.csv')\n",
         "order_pay.head()"
       ]
     },
@@ -675,7 +675,7 @@
         }
       ],
       "source": [
-        "order_rev = pd.read_csv('E-Commerce Public Dataset/order_reviews_dataset.csv')\n",
+        "order_rev = pd.read_csv('/E-Commerce Public Dataset/order_reviews_dataset.csv')\n",
         "order_rev.head()"
       ]
     },
@@ -818,7 +818,7 @@
         }
       ],
       "source": [
-        "orders_df = pd.read_csv('E-Commerce Public Dataset/orders_dataset.csv')\n",
+        "orders_df = pd.read_csv('/E-Commerce Public Dataset/orders_dataset.csv')\n",
         "orders_df.head()"
       ]
     },
@@ -904,7 +904,7 @@
         }
       ],
       "source": [
-        "product_cat = pd.read_csv('E-Commerce Public Dataset/product_category_name_translation.csv')\n",
+        "product_cat = pd.read_csv('/E-Commerce Public Dataset/product_category_name_translation.csv')\n",
         "product_cat.head()"
       ]
     },
@@ -1046,7 +1046,7 @@
         }
       ],
       "source": [
-        "products_df = pd.read_csv('E-Commerce Public Dataset/products_dataset.csv')\n",
+        "products_df = pd.read_csv('/E-Commerce Public Dataset/products_dataset.csv')\n",
         "products_df.head()"
       ]
     },
@@ -1151,7 +1151,7 @@
         }
       ],
       "source": [
-        "sellers_df = pd.read_csv('E-Commerce Public Dataset/sellers_dataset.csv')\n",
+        "sellers_df = pd.read_csv('/E-Commerce Public Dataset/sellers_dataset.csv')\n",
         "sellers_df.head()"
       ]
     },
