--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -7858,7 +7858,7 @@
       },
       "outputs": [],
       "source": [
-        "all_data.to_csv('all_data.csv', index=False)"
+        "all_data.to_csv('/all_data.csv', index=False)"
       ]
     },
     {
@@ -9474,7 +9474,7 @@
       },
       "outputs": [],
       "source": [
-        "customers_silver.to_csv(\"geolocation.csv\", index=False)"
+        "customers_silver.to_csv(\"/geolocation.csv\", index=False)"
       ]
     },
     {
